# optimizationmaxxing

./: .gitignore  CLAUDE.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: MAXXTOPIA_AUTOSYNC.md
driver-oracle-worker/: README.md  worker.js  wrangler.toml
public/: splash.html
references/: audit-2026-06-25.md  audit-2026-06.md  efficacy-audit-2026-06-26.md  match-scan-spec.md
resources/: ram-kits.json
scripts/: extract_discord_tweaks.py  extract_with_llm.py  fetch_youtube_transcripts.py  mint-founder-codes.py  mint-unbound-codes.py  mint-vip-code.py  probe_gemini.py  telemetry-report.py
src/: App.tsx  index.css  main.tsx  watchdog.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/lhm/: LICENSE-PawnIO.txt  read_sensors.ps1  read_spd.ps1
src-tauri/resources/presentmon/: LICENSE-PresentMon.txt
src-tauri/resources/scripts/: clear_standby.ps1  hide_launcher.vbs
src-tauri/src/: auto_pin.rs  bios_audit.rs  cpusets.rs  crash.rs  drivers.rs  lib.rs  main.rs  match_scan.rs  metrics.rs  network_audit.rs  process_helpers.rs  standby.rs  telemetry.rs  toolkit.rs  vip.rs
src-tauri/src/engine/: actions.rs  bcdedit.rs  display.rs  elevation.rs  file_write.rs  mod.rs  powershell.rs  registry.rs  snapshots.rs
src-tauri/src/specs/: cpu.rs  gpu.rs  mobo.rs  mod.rs  os.rs  ram.rs  storage.rs
src/lib/: audit.ts  (+18 more)
telemetry-worker/: README.md  worker.js  wrangler.toml
vip-worker/: README.md  worker.js  wrangler.toml
web-landing/: README.md  index.html  og.html  robots.txt  sitemap.xml  versions.json
(+233 files in other folders)
