[package]
name = "optimizationmaxxing"
version = "0.1.90"
description = "PC optimization tool for competitive gamers"
authors = ["Diggy"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "optimizationmaxxing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# Phase 3 — spec detection
wmi = "0.14"
raw-cpuid = "11"
winreg = "0.55"
windows = { version = "0.61", features = ["Wdk_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Security", "Win32_Graphics_Gdi"] }

# Phase 4 — engine + snapshot store
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"

# Live system metrics for dashboard ring gauges
sysinfo = "0.32"

# Phase 7 — HWID-bound VIP redemption codes
hmac = "0.12"
sha2 = "0.10"

# Phase 10 — auto-update via Tauri updater
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
